# wireguard-tunnel

./: .gitignore  README.md  build.gradle  gradle.properties  shell.nix
.github/workflows/: build.yml
rust/: Cargo.toml  Cross.toml  build.rs
rust/.cargo/: config.toml
rust/src/: lib.rs
src/client/java/codes/dreaming/wireguard/: WireguardConfig.java  WireguardTunnelClient.java
src/client/java/codes/dreaming/wireguard/mixin/client/: ClientConnectionMixin.java  ExampleClientMixin.java  MultiplayerScreenMixin.java  OptionsScreenMixin.java
src/client/java/codes/dreaming/wireguard/netty/: WgSocketChannel.java
src/client/resources/: wireguard-tunnel.client.mixins.json
src/main/java/codes/dreaming/wireguard/: NativeLibraryLoader.java  WireguardTunnel.java
src/main/java/codes/dreaming/wireguard/jni/: Native.java
src/main/java/codes/dreaming/wireguard/mixin/: ExampleMixin.java
src/main/resources/: fabric.mod.json  wireguard-tunnel.mixins.json
