[package]
name = "wireguard-tunnel-jni"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[lib]
name = "wireguard_tunnel_jni"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"

[dependencies]
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
wireguard-netstack = "0.2.0"
warp-wireguard-gen = { version = "0.1.5", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
once_cell = "1.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
